--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_API_URL_SERVER=http://127.0.0.1:8000
-NEXT_PUBLIC_API_URL_CLIENT=http://localhost:3000
+NEXT_PUBLIC_API_URL_SERVER=http://127.0.0.1:8000 //Api Gatewet or your Server
